Cover GPIO framework. Added -npi option
-npi or --notpi will disable gpio or other features that are unique to the raspberry pi

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   ./smartsettia_unit_setup.sh --y
   - pip install codecov
 script:
-  - ./main.py -s
+  - ./main.py --single --fakewebcam --notpi
 
 after_success:
 - codecov
