--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ install:
   ./smartsettia_unit_setup.sh --y
   - pip install codecov
 script:
-  - ./main.py --single --fakewebcam --notpi
-
+  - ./main.py --single --fakewebcam --notpi --uuid "fdf9626a-65da-52ef-b43b-aed368471aa1"
 after_success:
 - codecov
