--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ install:
   ./setup.sh --y
   - pip install codecov
 script:
-  - ./main.py --single --fakewebcam --notpi --uuid "fdf9626a-65da-52ef-b43b-aed368471aa1"
+  - ./script/main.py --single --fakewebcam --notpi --uuid "fdf9626a-65da-52ef-b43b-aed368471aa1"
 after_success:
 - codecov
