Faster travis ci builds. Added flag '--f' to skip apt upgrade step

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   - 2.7
 
 install:
-  ./setup.sh --y
+  ./setup.sh --y --f
   - pip install codecov
 script:
   - ./script/main.py --single --fakewebcam --notpi --uuid "fdf9626a-65da-52ef-b43b-aed368471aa1"
